attempting to remove hidden characters

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -106,13 +106,11 @@ function gatherList(){
     <h1>Password Manager Login</h1>
   </div>
   <div data-role="main" class="ui-content">
-      <form>
-               <label for="text-1">User Name:</label>
-               <input type="text" name="text-1" id="text-name" value="">
-
-               <label for="text-1">Password:</label>
-               <input type="password" name="text-1" id="text-pass" value="">
-               <a href="#pageURLS" class="ui-btn" onclick="login()">Submit</a>
+      <form><label for="text-1">User Name:</label>
+          <input type="text" name="text-1" id="text-name" value="">
+          <label for="text-1">Password:</label>
+          <input type="password" name="text-1" id="text-pass" value="">
+          <a href="#pageURLS" class="ui-btn" onclick="login()">Submit</a>
       </form>
   </div>
     <div id="missingauth" data-role="popup" data-overlay-theme="a" class="ui-content">
