fixed missing div

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -128,7 +128,14 @@ function gatherList(){
     <h1>Password Manager</h1>
   </div>
   <div data-role="main" class="ui-content">
-      <div id="url_list"><div class="ui-grid-a"><div id="url_list_0" class="ui-block-a"></div><div id="url_list_1" class="ui-block-b"></div></div>
+    <div id="url_list">
+          <div class="ui-grid-a">
+              <div id="url_list_0" class="ui-block-a">
+              </div>
+              <div id="url_list_1" class="ui-block-b">
+              </div>
+          </div>
+    </div>
     <a href="" class="ui-btn ui-btn-inline">Delete Existing</a>
     <a href="#createNew" class="ui-btn ui-btn-inline">Create New Password</a>
   </div>
