fixing url for redirect

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -127,7 +127,7 @@ function gatherList(){
 <script>
     $( document ).on( "pagecreate", "#pageURLS", function ( event ) {
         if(password == ""){
-            document.location.href = url;
+            document.location.href = '#pagemain';
         }
     });
 </script>
