re-added refresh

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -143,7 +143,7 @@ function gatherList(){
              'error' : 
                  function(jqxhr, textStatus, errorThrown){
                     alert("Failure in Getting Account Details")
-                    //window.location.replace("https://password.shanedbwiseman.com/")
+                    window.location.replace("https://password.shanedbwiseman.com/")
                  }
     });
 }
