bugfix: on chrome auto refresh, need to clear token as token is most likely expired

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -177,6 +177,7 @@ function gatherList(){
     $( document ).on( "pagecreate", "#pageURLS", function ( event ) {
         if(password == ""){
             document.location.href = '#pagemain';
+            $('#text_input-token').val("")
         }
     });
 </script>
