--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -72,7 +72,7 @@ function login(){
 
     username = $('#text-name').val()
     password = $('#text-pass').val()
-    Cookies.set('username', username, { expires: 1);
+    Cookies.set('username', username, { expires: 1 });
 
     gatherList()
 }
